--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -2,7 +2,7 @@
   <div class="expert-details-header global-container-min">
     <div class="global-container">
       <div class="section-title">
-        EXPERTS RATINGS ON {{asset.name}}
+        EXPERT RATINGS ON {{asset.name}}
       </div>
       <div fxLayout="column" fxLayoutGap="60px">
         <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="36px" fxLayoutGap.lt-md="24px" fxLayoutAlign.gt-sm="center center" fxLayoutAlign.lt-md="center center">
