--- a/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.css
+++ b/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.css
@@ -18,3 +18,10 @@ td.mat-column-agencyName span{
     padding: 5px;
     margin:auto;
 }
+
+.no-agency-rating{
+    margin-top: 30px;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+}
