--- a/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.html
+++ b/Web/src/app/components/asset/asset-details/reports-tab/reports-tab.component.html
@@ -49,7 +49,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row matRipple *matRowDef="let row; columns: displayedColumns;" (click)="onRowClick(row)" class="element-row"></tr>
     </table>
-    <div *ngIf="!reports || reports.length == 0">
+    <div class="no-agency-rating" *ngIf="!reports || reports.length == 0">
       There's no agency rating of this asset.
     </div>
     <div *ngIf="hasMoreReports()" fxLayoutAlign="center center">
