Invite a friend component

--- a/Web/src/app/components/account/invite-friend/invite-friend.component.css
+++ b/Web/src/app/components/account/invite-friend/invite-friend.component.css
@@ -9,3 +9,15 @@
     display: table-caption;
     text-align: center;    
 }
+
+.sb-button ::ng-deep button{
+    width: 140px;
+    margin-bottom: 10px;
+}
+
+@media(min-width:960px){
+    .sb-button{
+        margin-top: 12px;
+        margin-bottom: 0px;
+    }
+}
