--- a/Web/src/app/components/account/invite-friend/invite-friend.component.html
+++ b/Web/src/app/components/account/invite-friend/invite-friend.component.html
@@ -3,7 +3,7 @@
       Invite your friends to Auctus and earn free AUC<br>
       Get 1000 AUC every time you refer a friend to Auctus
   </p>
-  <div fxLayout="row" fxLayout.xs="column"  fxLayoutGap="10px" fxLayoutAlign="center center">
+  <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutGap.gt-sm="10px" fxLayoutAlign.gt-sm="center start" fxLayoutAlign.lt-md="center center">
     <mat-form-field appearance="outline" class="input-modal">
       <mat-label>Referral Link</mat-label>
       <input matInput #Link placeholder="Referral Link" type="text" onClick="this.select();" [(ngModel)]="link" readonly />
