--- a/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
+++ b/Web/src/app/components/recommendation-distribution/recommendation-distribution.component.html
@@ -8,7 +8,7 @@
             Sell: {{totalSell}}
         </div>
         <div class="close">
-            Hold: {{totalClose}}
+            Close: {{totalClose}}
         </div>
     </div>
 </div>
