--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -160,6 +160,9 @@
     <mat-tab label="Agency Ratings"> 
       <reports-tab [reports]="asset.reports"></reports-tab>
     </mat-tab>
+    <mat-tab label="Events"> 
+      <events-tab [events]="asset.events"></events-tab>
+    </mat-tab>
   </mat-tab-group>
 </div>
 <trending-assets class="global-container-min inverted"></trending-assets>
