--- a/Web/src/app/components/account/feed/report-card/report-card.component.html
+++ b/Web/src/app/components/account/feed/report-card/report-card.component.html
@@ -1,4 +1,4 @@
-<div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap.gt-sm="30px" fxLayoutGap.lt-md="10px">
+<div class="feed-card" fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap.gt-sm="30px" fxLayoutGap.lt-md="10px">
     <div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutAlign="center center" fxLayoutGap.gt-xs="30px" fxLayoutGap.lt-sm="10px">
       <a [href]="reportFeed.report.agencyWebSite" target="_blank">
         <div class="feed-picture">
