--- a/Web/src/app/components/asset/asset-details/asset-details.component.html
+++ b/Web/src/app/components/asset/asset-details/asset-details.component.html
@@ -58,10 +58,10 @@
       <mat-tab label="Summary">
         <summary-tab [asset]="asset"></summary-tab>
       </mat-tab>
-      <mat-tab label="Expert Ratings"> 
+      <mat-tab label="Ratings"> 
         <expert-ratings-tab [asset]="asset"></expert-ratings-tab>
       </mat-tab>
-      <mat-tab label="Agency Ratings"> 
+      <mat-tab label="Reports"> 
         <reports-tab [reports]="asset.reports"></reports-tab>
       </mat-tab>
       <mat-tab label="Events"> 
