--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.css
@@ -174,6 +174,11 @@
     cursor: pointer;
 }
 
+
+.follow-link:hover{
+    opacity:0.75;
+}
+
 .follow-link.unfollow{
     filter: grayscale(100);
     -webkit-filter: grayscale(100);
