--- a/Web/src/app/components/header/header.component.css
+++ b/Web/src/app/components/header/header.component.css
@@ -68,7 +68,7 @@ a span {
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    border-style: solid;
+    /* border-style: solid;
     border-width: 1px;
     -webkit-border-image: 
         -webkit-gradient(linear, 0 0, 0 100%, from(#07d1ff), to(#126efd)) 1 100%;
@@ -80,12 +80,12 @@ a span {
         -o-linear-gradient(#07d1ff, #126efd) 1 100%;
         border-image:
         linear-gradient(to top, #07d1ff 1%, #126efd) 1 100%;
-    border-image-slice: 1;
+    border-image-slice: 1; */
     font-size: 11px;
     font-weight: 500;
-    text-align: center;
+    /* text-align: center;
     color: #07d1ff;
-    cursor: pointer;
+    cursor: pointer; */
     margin-right: 15px;
 }
 
