--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -58,14 +58,20 @@
 
 .recommendation-table td{
     color: #ffffff;
-    background-color: #000000;
+    
     font-size: 8.5px;
     font-weight: 300;
     border-bottom: solid 1px #95959544;
     padding: 14px 20px 11px;
 }
 
+.recommendation-table tr{
+    background-color: #000000;
+}
 
+.recommendation-table tr:hover{
+    background-color: #191e1f;
+}
 
 .recommendation-table tr:last-child td{
     border-bottom: none;
