--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -429,14 +429,39 @@ textarea:read-only {
 }
 
 .white-button{
-  border-style: solid;
-  border-width: 1px;
-  border-color: white;
-  border-image: none;
   color: white;
 }
 
-.blue-button{
+.blue-button{  
+  color: #07d1ff;
+}
+
+.white-button,
+.blue-button{  
+  text-align: center;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s;
+  span {
+    transition: all 0.3s;
+    transform: scale(1, 1);
+  }
+}
+
+.white-button::before, .white-button::after,
+.blue-button::before, .blue-button::after {
+  content: '';
+  position: absolute;
+  transition: all 0.3s;
+  bottom: 0;
+  left: 0;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  z-index: 1;
+}
+
+.blue-button::after {
+  transition: all 0.3s;
   border-style: solid;
   border-width: 1px;
   -webkit-border-image: 
@@ -450,13 +475,38 @@ textarea:read-only {
     border-image:
       linear-gradient(to top, #07d1ff 1%, #126efd) 1 100%;
   border-image-slice: 1;
-  color: #07d1ff;
 }
 
-.white-button,
-.blue-button{  
-  text-align: center;
-  cursor: pointer;
+.blue-button::before {
+  opacity: 0;
+  background: #07d1ff12;
+  transform: scale(1, 0.1);
+}
+
+.white-button::after {
+  transition: all 0.3s;
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  border-image: none;
+}
+
+.white-button::before {
+  opacity: 0;
+  background: #ffffff10;
+  transform: scale(1, 0.1);
+}
+
+.white-button:hover::before,
+.blue-button:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+
+.white-button:hover::after,
+.blue-button:hover::after {
+  transform: scale(1, .1);
+  opacity: 0;
 }
 
 .circle {
