--- a/Web/src/app/components/asset/list-reports/list-reports.component.css
+++ b/Web/src/app/components/asset/list-reports/list-reports.component.css
@@ -13,3 +13,14 @@
     margin-top: 22px;
     margin-bottom: 22px;
 }
+
+.no-report-message {
+    padding-top: 25px;
+    padding-bottom: 50px;
+    font-size: 25px;
+    color: white;
+}
+
+.coin-report-search {
+    max-width: 225px;
+}
