--- a/Web/src/app/components/advisor/new-advice/new-advice.component.html
+++ b/Web/src/app/components/advisor/new-advice/new-advice.component.html
@@ -1,7 +1,9 @@
 <div class="div-data" fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
   <div class="text-center">Chose a coin, select one position and hit confirm. The update on your list will be automatic.</div>
   <coin-search #CoinSearch [options]="getSearchOptions()"></coin-search>
-  <button *ngIf="showButtons" class="btn-buy btn-option" mat-flat-button (click)="showButtons && buy()">BUY<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
-  <button *ngIf="(showButtons && showSell)" class="btn-sell btn-option" mat-flat-button (click)="showButtons && showSell && sell()">SELL<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
-  <button *ngIf="(showButtons && showClose)" class="btn-close btn-option" mat-flat-button (click)="showButtons && showClose && close()">CLOSE<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
+  <button *ngIf="showButtons" class="btn-buy btn-option" [ngClass]="advise.adviceType == 0 || advise.adviceType == 2 ? 'btn-not-selected' : ''" mat-flat-button (click)="showButtons && buy()">BUY<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
+  <button *ngIf="(showButtons && showSell)" class="btn-sell btn-option" [ngClass]="advise.adviceType == 1 || advise.adviceType == 2 ? 'btn-not-selected' : ''" mat-flat-button (click)="showButtons && showSell && sell()">SELL<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
+  <button *ngIf="(showButtons && showClose)" class="btn-close btn-option" [ngClass]="advise.adviceType == 0 || advise.adviceType == 1 ? 'btn-not-selected' : ''" mat-flat-button (click)="showButtons && showClose && close()">CLOSE<ng-container *ngIf="lastValue"> at {{lastValue | valueDisplay}}</ng-container></button>
+  <advice-parameters #AdviceParameters class="advice-parameters" *ngIf="advise.adviceType == 0 || advise.adviceType == 1" [currentPrice]="lastValue" [adviceType]="advise.adviceType"></advice-parameters>
+  <button *ngIf="advise.adviceType == 0 || advise.adviceType == 1 || advise.adviceType == 2" class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="onConfirmClick()">{{getConfirmText()}}</button>
 </div>
