--- a/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
+++ b/Web/src/app/components/util/inheritance-input/inheritance-input.component.html
@@ -11,6 +11,9 @@
     readonly="{{disabled}}"
     minlength="{{minlength}}" 
     maxlength="{{maxlength}}" 
+    min="{{min}}" 
+    max="{{max}}" 
+    step="{{step}}"
     autocomplete="{{autocomplete}}"
     (change)="onChangeInput()"/>
 
