--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -1,10 +1,8 @@
-<header *ngIf="!isHotSite()"></header>
-<ng-http-loader *ngIf="!isHotSite()"
-    [entryComponent]="topLoading">
-</ng-http-loader>
+<header *ngIf="!showEmptyPage()"></header>
+<ng-http-loader *ngIf="!showEmptyPage()" [entryComponent]="topLoading"></ng-http-loader>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
-<button class="share-button" *ngIf="isLogged()" mat-fab color="primary" (click)="openSocialMediaModal()">
+<button class="share-button" *ngIf="isLogged() && !showEmptyPage()" mat-fab color="primary" (click)="openSocialMediaModal()">
     <mat-icon aria-label="Share with friends">share</mat-icon>
 </button>
-<footer *ngIf="!isHotSite()" class="global-container-min"></footer>
+<footer *ngIf="!showEmptyPage()" class="global-container-min"></footer>
