--- a/Web/src/app/components/terminal/terminal.component.html
+++ b/Web/src/app/components/terminal/terminal.component.html
@@ -1,1 +1,25 @@
-<news-list></news-list>
+<div class="no-header-container">
+    <div class="no-header-logo"><img [src]="getLogoImgUrl()" routerLink="" class="landing-logo"/></div>
+    <mat-tab-group class="global-container-min" (selectedTabChange)="onAssetChange($event)">
+        <mat-tab label="BTC">
+        </mat-tab>
+        <mat-tab label="ETH"> 
+        </mat-tab>
+        <mat-tab label="XRP"> 
+        </mat-tab>
+        <mat-tab label="EOS"> 
+        </mat-tab>
+        <mat-tab label="BCH"> 
+        </mat-tab>
+    </mat-tab-group>
+    <div fxLayout="column" fxLayoutAlign="start start">
+        <div class="painel-row" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <crypto-chart #CryptoChart [assetId]="assetId" fxFlex="50"></crypto-chart>
+            <div fxFlex="50"></div>
+        </div>
+        <div class="painel-row" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
+            <div fxFlex="50"></div>
+            <news-list fxFlex="50"></news-list>
+        </div>
+    </div>
+</div>
