--- a/Web/src/app/components/terminal/news-list/news-list.component.html
+++ b/Web/src/app/components/terminal/news-list/news-list.component.html
@@ -1,12 +1,25 @@
-<div class="search-results"
-    infiniteScroll
-    [infiniteScrollDistance]="2"
-    [infiniteScrollThrottle]="50"
-    (scrolled)="onScroll()">
-    <div *ngFor="let currentNews of news">
-      {{currentNews.id}}
-      <br>
-      <br><br><br><br><br><br><br><br><br><br>
-    </div>
+<div class="box-header">
+  NEWS
+  <div class="top-triangle"></div>
+</div>
+<div class="box-container" infiniteScroll
+[infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" [scrollWindow]="false"
+(scrolled)="onScroll()">
+<table mat-table [dataSource]="news">
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef> Title </th>
+    <td mat-cell *matCellDef="let element"> <a [href]="element.link" target="_blank">{{element.title}}</a> </td>
+  </ng-container>
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let element"> {{element.creationDate | date : 'mediumDate'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="added">
+    <th mat-header-cell *matHeaderCellDef> Added </th>
+    <td mat-cell *matCellDef="let element"> {{element.externalCreationDate | timeAgo}} </td>
+  </ng-container>
 
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
 </div>
