--- a/Web/src/app/components/terminal/news-list/news-list.component.css
+++ b/Web/src/app/components/terminal/news-list/news-list.component.css
@@ -2,8 +2,23 @@
 
 .mat-column-date{
     width: 80px;
+    padding-right: 10px;
 }
 
-.mat-column-added{
+.mat-column-source{
     width: 85px;
+    padding-right: 10px;
+}
+
+a:visited {
+    color: #707070;
+}
+
+.signalR{
+    background-color: #404040;
+}
+
+::ng-deep .mat-row{
+    -webkit-transition: background-color 5s; /* Safari */
+    transition: background-color 5s;
 }
