--- a/Web/src/app/components/terminal/news-list/news-list.component.html
+++ b/Web/src/app/components/terminal/news-list/news-list.component.html
@@ -1,26 +1,26 @@
 <div class="box-header">
   NEWS
-  <div class="top-triangle"></div>
+  <div class="top-triangle" (click)="addNews()"></div>
 </div>
 <div class="box-container" infiniteScroll
 [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" [scrollWindow]="false"
 (scrolled)="onScroll()">
 <table class="box-table" mat-table [dataSource]="news">
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef> Date </th>
+    <td mat-cell *matCellDef="let element" [title]="element.creationDate | date:'medium'"> {{element.creationDate | timeAgo}} </td>
+  </ng-container>
+  <ng-container matColumnDef="source">
+    <th mat-header-cell *matHeaderCellDef> Source </th>
+    <td mat-cell *matCellDef="let element"> {{element.newsSource.name}} </td>
+  </ng-container>
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef> Title </th>
     <td mat-cell *matCellDef="let element"> <a [href]="element.link" target="_blank">{{element.title}}</a> </td>
   </ng-container>
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef> Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.creationDate | date : 'mediumDate'}} </td>
-  </ng-container>
-  <ng-container matColumnDef="added">
-    <th mat-header-cell *matHeaderCellDef> Added </th>
-    <td mat-cell *matCellDef="let element"> {{element.externalCreationDate | timeAgo}} </td>
-  </ng-container>
-
+  
   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.signalR]="row.signalR"></tr>
 </table>
-<div class="box-message" *ngIf="hasMoreNews">Loading...</div>
+<div class="box-message" *ngIf="hasMoreNews || news == null">Loading...</div>
 </div>
