--- a/Web/src/app/components/terminal/news-list/news-list.component.html
+++ b/Web/src/app/components/terminal/news-list/news-list.component.html
@@ -1,6 +1,6 @@
 <div class="box-header">
   NEWS
-  <div class="top-triangle" (click)="addNews()"></div>
+  <div class="top-triangle"></div>
 </div>
 <div class="box-container" infiniteScroll
 [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" [scrollWindow]="false"
